fixed 'our work' photos rendering past right of viewport on iphone 6/7/8 mobile view

--- a/style.css
+++ b/style.css
@@ -2,10 +2,6 @@
     box-sizing: border-box;
 }
 
-body {
-    height: 100%;
-}
-
 /* Navbar */
 .bg-light {
     background-color: white !important;
